crates/usfm_parser/tests/snapshots/recovery__unknown_marker__no_space_before_chapternumber.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN genesis Some desc\n\\c 1\n\\p\n\\v1 test verse\n\\s3 test\n\\v 2 more verse\n\\c2\n\\p\n\\v 1 next chapter\n\\v2 error text"
---
Book GEN "genesis Some desc" @0..25
ChapterStart 1@26..30
Para p@31..49
  Text "test verse"@38..49
Para s3@49..78
  Text "test "@53..58
  VerseStart 2@58..62
  Text "more verse"@63..74
  VerseEnd 2
Para p@78..113
  VerseStart 1@81..85
  Text "next chapter error text"@86..113
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unknown-marker] @34..37: unknown marker `\v1`
error[unknown-marker] @74..77: unknown marker `\c2`
error[unknown-marker] @99..102: unknown marker `\v2`
